[package]
name = "ngx-biscuit"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Arthur Gautier <baloo@superbaloo.net>"]
description = "An nginx dynamic module to authenticate requests via biscuit"

[lib]
crate-type = ["cdylib"]

[dependencies]
http = "1.1.0"
ngx = "0.5.0"

biscuit-auth = "6.0.0"
nom = "8.0.0"

[features]
default = ["export-modules"]
export-modules = []
